# qchat1

./: build.gradle.kts  settings.gradle.kts
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: Makefile  native-lib.cpp
app/src/main/cpp/include/: aes.h  api.h  dilithium.h  params.h  sign.h
app/src/main/cpp/src/: packing.c  sign.c
app/src/main/res/anim/: fade_in.xml  fade_out.xml  slide_in_left.xml  slide_in_right.xml  slide_out_left.xml  slide_out_right.xml
app/src/main/res/color/: bottom_nav_color.xml
app/src/main/res/drawable/: background_chat_input.xml  background_icon.xml  bg_chat_bubble.xml  bg_chat_bubble_received.xml  bg_chat_bubble_sent.xml  bg_message_received.xml  bg_message_sent.xml  bg_received_message.xml  bg_send_message.xml  blured_bottom_overlay.xml  buttom_nav.xml  card_background.xml  chat_background.xml  circle.xml  circle_background.xml  circle_background2.xml  circle_shape.xml  circle_shape_green.xml  circle_shape_grey.xml  circle_shape_lightblue.xml  circle_shape_red.xml  circular_background.xml  detail.xml  gradient.xml  ic_about.xml  ic_attachment.xml  ic_back.xml  ic_call2.xml  ic_chat.xml  ic_check_circle.xml  ic_contact.xml  ic_contacts.xml  ic_faq.xml  ic_help.xml  ic_invite.xml  ic_key.xml  ic_message2.xml  ic_notifications.xml  ic_privacy.xml  ic_qr_code.xml  (+11 more)
app/src/main/res/font/: montserrat.xml
app/src/main/res/layout/: activity_call.xml  activity_chat.xml  activity_chat_settings.xml  activity_edit_profile.xml  activity_groups.xml  activity_help_settings.xml  activity_incomig_call.xml  activity_login.xml  (+78 more)
(+141 files in other folders)
